# tag-tracer

./: .gitignore  OUTLINE.md  README.md  pyproject.toml  requirements.txt
assets/: .~lock.sample-config.xlsx#  sample-config.xlsx
output/: validation_report_20260213_162934.html  validation_report_20260213_163040.html  validation_report_20260213_163040.json
src/: cli.py  models.py
src/browser/: browser.py
src/commands/: scan.py  validate.py  version.py
src/config_loader/: config_loader.py
src/excel_loader/: excel_loader.py
src/network_capture/: network_capture.py
src/reporting/: excel_report.py  html_report.py  json_report.py  reporting.py
src/reporting/templates/: report_template.html
src/utils/: inspect_excel.py  utils.py
src/validation/: matcher.py  rules.py  validation.py
tag_tracer/: __init__.py  cli.py
tag_tracer/browser/: browser.py
tag_tracer/excel_loader/: excel_loader.py
tag_tracer/reporting/: reporting.py
tag_tracer/utils/: utils.py
tag_tracer/validation/: validation.py
tests/: test_browser_mock.py  test_config_loader.py  test_validation.py
